--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="style/bootstrap.min.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/media.css">
-  <title>Document</title>
+  <link rel="icon shurtcut" href="image/slide_1.png">
+  <title>My work</title>
 </head>
 
 <body>
@@ -71,8 +72,7 @@
                     <path
                       d="M38.8876 36.6653V46.6007H50.7572L49.6408 59.4867L38.8876 62.476V72.8132L58.6506 67.1657L58.7941 65.4878L61.0582 39.3332L61.2952 36.6653H38.8876Z"
                       fill="white" />
-                    <path
-                      d="M38.8876 16.5565V26.4918H62.1716L62.3649 24.2611L62.8047 19.2243L63.0354 16.5565H38.8876Z"
+                    <path d="M38.8876 16.5565V26.4918H62.1716L62.3649 24.2611L62.8047 19.2243L63.0354 16.5565H38.8876Z"
                       fill="white" />
                   </svg>
                   <h3 class="header__icons-name">html</h3>
@@ -126,12 +126,12 @@
             </div>
           </div>
           <div class="carousel-indicators slider__indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active slider__pagination"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button class="slider__pagination" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button class="slider__pagination" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+              class="active slider__pagination" aria-current="true" aria-label="Slide 1"></button>
+            <button class="slider__pagination" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button class="slider__pagination" type="button" data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
 
 
@@ -145,7 +145,32 @@
       </div>
     </div>
   </header>
-
+  <main>
+    <section class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-6 d-flex justify-content-center">
+            <div class="about__img">
+              <span class="about__work">my work for</span>
+              <img src="image/about.png" alt="">
+            </div>
+          </div>
+          <div class="col-12 col-lg-6 d-flex">
+            <div class="about__desc">
+              <h2 class="about__title section-title">What is Frond-End</h2>
+              <p class="about__text">it is the development of of the user interface and functions that run on on the
+                client side of a website or application
+                This is everything that a user sees when opening a or aweb page and with which he interacts.
+              </p>
+              <p class="about__text">This is everything that a user sees when opening a web page and with which he
+                interacts.</p>
+                <a href="" class="all-btn about__btn">go to work</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 
   <script src="js/bootstrap.bundle.min.js"></script>
